// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ColorInput.vue renders OXD Color Input 1`] = `
<div class="oxd-color-input oxd-color-input--active" tabindex="0">
  <div class="oxd-color-input-preview" style="background-color: rgb(0, 0, 0); opacity: 1; cursor: pointer;"></div>
  <transition-stub name="transition-fade-down" appear="false" persisted="false" css="true">
    <!--v-if-->
  </transition-stub>
</div>
`;

exports[`ColorInput.vue renders OXD Color Input with color 1`] = `
<div class="oxd-color-input oxd-color-input--active" tabindex="0">
  <div class="oxd-color-input-preview" style="background-color: rgb(255, 0, 0); opacity: 1; cursor: pointer;"></div>
  <transition-stub name="transition-fade-down" appear="false" persisted="false" css="true">
    <!--v-if-->
  </transition-stub>
</div>
`;

exports[`ColorInput.vue should accept 6 digit hex input 1`] = `
<div class="oxd-color-input oxd-color-input--active oxd-color-input--focus" tabindex="0">
  <div class="oxd-color-input-preview" style="background-color: rgb(0, 0, 0); opacity: 1; cursor: pointer;"></div>
  <transition-stub name="transition-fade-down" appear="false" persisted="false" css="true">
    <div role="alert" class="oxd-color-picker --positon-right">
      <div class="oxd-color-picker-indicator" style="top: 0px; left: 228px;"></div><canvas width="228" height="228" class="oxd-color-picker-palette"></canvas><input class="oxd-color-picker-range" type="range" max="359"><label class="oxd-label oxd-color-picker-label">HEX</label><input class="oxd-input oxd-input--active">
    </div>
  </transition-stub>
</div>
`;

exports[`ColorInput.vue should not accept 3 digit hex input 1`] = `
<div class="oxd-color-input oxd-color-input--active oxd-color-input--focus" tabindex="0">
  <div class="oxd-color-input-preview" style="background-color: rgb(0, 0, 0); opacity: 1; cursor: pointer;"></div>
  <transition-stub name="transition-fade-down" appear="false" persisted="false" css="true">
    <div role="alert" class="oxd-color-picker --positon-right">
      <div class="oxd-color-picker-indicator" style="top: 0px; left: 228px;"></div><canvas width="228" height="228" class="oxd-color-picker-palette"></canvas><input class="oxd-color-picker-range" type="range" max="359"><label class="oxd-label oxd-color-picker-label">HEX</label><input class="oxd-input oxd-input--active">
    </div>
  </transition-stub>
</div>
`;
